scrollbar and fixed header attached

--- a/src/app/add-region/add-region.component.css
+++ b/src/app/add-region/add-region.component.css
@@ -169,8 +169,9 @@ h2 {
     /* padding: 0.5em; */
     background-color: #fff;
     flex-basis: 90% !important;
+    height: 0;
     overflow-y: auto;
-    box-shadow: 0 0 0 1px #999 inset;
+    /* box-shadow: 0 0 0 1px #999 inset; */
     position: relative;
 }
 
@@ -198,4 +199,28 @@ h2 {
 
 .dataTable table tbody tr td input[type="text"] {
     width: 85%;
+}
+
+.fixedTBH {
+    position: absolute;
+    left: 0;
+    right:0;
+    background-color: #999;
+}
+
+.fixedTBH ul {
+    flex-basis: 100% !important;
+    flex-direction: row;
+}
+
+.fixedTBH ul li {
+    padding: 0.5em;
+    flex-basis: 33.3%;
+    color: white;
+}
+
+.dataTableContainer {
+    flex-basis: 100% !important;
+    height: 100%;
+    overflow-y: overlay;
 }
